[package]
name = "micromouse_esp32"
version = "0.1.0"
authors = ["Kazuki Iida <elkel53930@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32s3-hal", version = "0.10.0", path="../esp-hal/esp32s3-hal" }
embedded_hal = { package = "embedded-hal", version = "0.2.7" }
esp-backtrace = { version = "0.7.0", features = ["esp32s3", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.5.0", features = ["esp32s3"] }
mm_maze_solver = { path = "../mm_maze_solver" }
critical-section  = "1.1.1"